// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getTaskDetail — moliyaviy hisobot > MIXED, snapshot transfer 1`] = `
{
  "adminEarnedAmount": 0,
  "branchId": 2,
  "client": {
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": "150",
    "dealAmountCurrency": "USD",
    "dealAmountExchangeRate": null,
    "dealAmount_amount_uzs": null,
    "dealAmount_currency": null,
    "dealAmount_exchange_rate": null,
    "id": 3,
    "name": "Mijoz",
    "serviceFeeTransferUzs": null,
  },
  "createdAt": "2026-09-01T10:00:00.000Z",
  "customsPaymentMultiplier": null,
  "errors": [],
  "exchangeRateInfo": null,
  "financialReport": {
    "cashAmount": 530000,
    "certifierFee": 210000,
    "contractPaymentType": "MIXED",
    "dealAmount": 1230000,
    "dealAmountBase": 1230000,
    "declarationPayment": 0,
    "hiredWorkerPayment": 0,
    "netProfit": 1020000,
    "statePayment": 0,
    "transferAmount": 700000,
  },
  "hasPsr": false,
  "id": 1,
  "kpiLogs": [],
  "netProfit": 1020000,
  "operationalProfit": 80.63241106719367,
  "snapshotCertificatePayment": null,
  "snapshotCertificatePayment_amount_uzs": null,
  "snapshotCertificatePayment_currency": null,
  "snapshotCertificatePayment_exchange_rate": null,
  "snapshotContractPaymentType": "MIXED",
  "snapshotCustomsPayment": null,
  "snapshotCustomsPayment_amount_uzs": null,
  "snapshotCustomsPayment_currency": null,
  "snapshotCustomsPayment_exchange_rate": null,
  "snapshotDealAmount": "100",
  "snapshotDealAmountExchangeRate": "12300",
  "snapshotDealAmount_amount_uzs": null,
  "snapshotDealAmount_exchange_rate": null,
  "snapshotDealAmount_exchange_source": null,
  "snapshotPsrPrice": null,
  "snapshotServiceFeeTransferUzs": "700000",
  "snapshotWorkerPrice": null,
  "stages": [],
  "title": "T",
  "transactions": [],
}
`;

exports[`getTaskDetail — moliyaviy hisobot > UZS mijoz, TRANSFER_ONLY 1`] = `
{
  "adminEarnedAmount": 0,
  "branchId": 2,
  "client": {
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": "2000000",
    "dealAmountCurrency": "USD",
    "dealAmountExchangeRate": null,
    "dealAmount_amount_uzs": null,
    "dealAmount_currency": "UZS",
    "dealAmount_exchange_rate": null,
    "id": 3,
    "name": "Mijoz",
    "serviceFeeTransferUzs": "500000",
  },
  "createdAt": "2026-09-01T10:00:00.000Z",
  "customsPaymentMultiplier": null,
  "errors": [],
  "exchangeRateInfo": null,
  "financialReport": {
    "cashAmount": 0,
    "certifierFee": 0,
    "contractPaymentType": "TRANSFER_ONLY",
    "dealAmount": 2000010,
    "dealAmountBase": 2000000,
    "declarationPayment": 40000,
    "hiredWorkerPayment": 25000,
    "netProfit": 1975010,
    "statePayment": 25001.5,
    "transferAmount": 2000010,
  },
  "hasPsr": true,
  "id": 1,
  "kpiLogs": [
    {
      "amount": "25000",
      "createdAt": "2026-09-01T00:00:00.000Z",
      "id": 2,
      "stageName": "Deklaratsiya",
      "user": {
        "email": "u2@x",
        "id": 2,
        "name": "U2",
      },
      "userId": 2,
    },
  ],
  "netProfit": 1975010,
  "operationalProfit": 156.12727272727273,
  "snapshotCertificatePayment": "120000",
  "snapshotCertificatePayment_amount_uzs": null,
  "snapshotCertificatePayment_currency": "UZS",
  "snapshotCertificatePayment_exchange_rate": null,
  "snapshotContractPaymentType": "TRANSFER_ONLY",
  "snapshotCustomsPayment": "40000",
  "snapshotCustomsPayment_amount_uzs": null,
  "snapshotCustomsPayment_currency": "UZS",
  "snapshotCustomsPayment_exchange_rate": null,
  "snapshotDealAmount": "2000000",
  "snapshotDealAmountExchangeRate": null,
  "snapshotDealAmount_amount_uzs": null,
  "snapshotDealAmount_exchange_rate": null,
  "snapshotDealAmount_exchange_source": null,
  "snapshotPsrPrice": null,
  "snapshotServiceFeeTransferUzs": null,
  "snapshotWorkerPrice": null,
  "stages": [],
  "title": "T",
  "transactions": [],
}
`;

exports[`getTaskDetail — moliyaviy hisobot > eski vazifa: davlat to'lovi yo'q 1`] = `
{
  "adminEarnedAmount": 0,
  "branchId": 2,
  "client": {
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": "150",
    "dealAmountCurrency": "USD",
    "dealAmountExchangeRate": null,
    "dealAmount_amount_uzs": null,
    "dealAmount_currency": null,
    "dealAmount_exchange_rate": "11800",
    "id": 3,
    "name": "Mijoz",
    "serviceFeeTransferUzs": null,
  },
  "createdAt": "2026-09-01T10:00:00.000Z",
  "customsPaymentMultiplier": null,
  "errors": [],
  "exchangeRateInfo": null,
  "financialReport": {
    "cashAmount": 1770000,
    "certifierFee": 0,
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": 1770000,
    "dealAmountBase": 1770000,
    "declarationPayment": 0,
    "hiredWorkerPayment": 0,
    "netProfit": 1770000,
    "statePayment": 0,
    "transferAmount": 0,
  },
  "hasPsr": false,
  "id": 1,
  "kpiLogs": [],
  "netProfit": 1770000,
  "operationalProfit": 139.92094861660078,
  "snapshotCertificatePayment": null,
  "snapshotCertificatePayment_amount_uzs": null,
  "snapshotCertificatePayment_currency": null,
  "snapshotCertificatePayment_exchange_rate": null,
  "snapshotContractPaymentType": null,
  "snapshotCustomsPayment": null,
  "snapshotCustomsPayment_amount_uzs": null,
  "snapshotCustomsPayment_currency": null,
  "snapshotCustomsPayment_exchange_rate": null,
  "snapshotDealAmount": null,
  "snapshotDealAmountExchangeRate": null,
  "snapshotDealAmount_amount_uzs": null,
  "snapshotDealAmount_exchange_rate": null,
  "snapshotDealAmount_exchange_source": null,
  "snapshotPsrPrice": null,
  "snapshotServiceFeeTransferUzs": null,
  "snapshotWorkerPrice": null,
  "stages": [],
  "title": "T",
  "transactions": [],
}
`;

exports[`getTaskDetail — moliyaviy hisobot > eski vazifa: kurs xatosi 1`] = `
{
  "adminEarnedAmount": 0,
  "branchId": 2,
  "client": {
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": "150",
    "dealAmountCurrency": "USD",
    "dealAmountExchangeRate": null,
    "dealAmount_amount_uzs": null,
    "dealAmount_currency": null,
    "dealAmount_exchange_rate": null,
    "id": 3,
    "name": "Mijoz",
    "serviceFeeTransferUzs": null,
  },
  "createdAt": "2026-09-01T10:00:00.000Z",
  "customsPaymentMultiplier": null,
  "errors": [],
  "exchangeRateInfo": null,
  "financialReport": {
    "cashAmount": 160,
    "certifierFee": 0,
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": 160,
    "dealAmountBase": 150,
    "declarationPayment": 40000,
    "hiredWorkerPayment": 0,
    "netProfit": -64841.5,
    "statePayment": 25001.5,
    "transferAmount": 0,
  },
  "hasPsr": true,
  "id": 1,
  "kpiLogs": [],
  "netProfit": -64841.5,
  "operationalProfit": null,
  "snapshotCertificatePayment": null,
  "snapshotCertificatePayment_amount_uzs": null,
  "snapshotCertificatePayment_currency": null,
  "snapshotCertificatePayment_exchange_rate": null,
  "snapshotContractPaymentType": null,
  "snapshotCustomsPayment": null,
  "snapshotCustomsPayment_amount_uzs": null,
  "snapshotCustomsPayment_currency": null,
  "snapshotCustomsPayment_exchange_rate": null,
  "snapshotDealAmount": null,
  "snapshotDealAmountExchangeRate": null,
  "snapshotDealAmount_amount_uzs": null,
  "snapshotDealAmount_exchange_rate": null,
  "snapshotDealAmount_exchange_source": null,
  "snapshotPsrPrice": null,
  "snapshotServiceFeeTransferUzs": null,
  "snapshotWorkerPrice": null,
  "stages": [],
  "title": "T",
  "transactions": [],
}
`;

exports[`getTaskDetail — moliyaviy hisobot > eski vazifa: snapshot yo'q, tarixiy kurs 1`] = `
{
  "adminEarnedAmount": 0,
  "branchId": 2,
  "client": {
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": "150",
    "dealAmountCurrency": "USD",
    "dealAmountExchangeRate": null,
    "dealAmount_amount_uzs": null,
    "dealAmount_currency": null,
    "dealAmount_exchange_rate": null,
    "id": 3,
    "name": "Mijoz",
    "serviceFeeTransferUzs": null,
  },
  "createdAt": "2025-05-01T10:00:00.000Z",
  "customsPaymentMultiplier": null,
  "errors": [],
  "exchangeRateInfo": null,
  "financialReport": {
    "cashAmount": 1936000,
    "certifierFee": 0,
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": 1936000,
    "dealAmountBase": 1815000,
    "declarationPayment": 40000,
    "hiredWorkerPayment": 0,
    "netProfit": 1870998.5,
    "statePayment": 25001.5,
    "transferAmount": 0,
  },
  "hasPsr": true,
  "id": 1,
  "kpiLogs": [],
  "netProfit": 1870998.5,
  "operationalProfit": 147.90501976284585,
  "snapshotCertificatePayment": null,
  "snapshotCertificatePayment_amount_uzs": null,
  "snapshotCertificatePayment_currency": null,
  "snapshotCertificatePayment_exchange_rate": null,
  "snapshotContractPaymentType": null,
  "snapshotCustomsPayment": null,
  "snapshotCustomsPayment_amount_uzs": null,
  "snapshotCustomsPayment_currency": null,
  "snapshotCustomsPayment_exchange_rate": null,
  "snapshotDealAmount": null,
  "snapshotDealAmountExchangeRate": null,
  "snapshotDealAmount_amount_uzs": null,
  "snapshotDealAmount_exchange_rate": null,
  "snapshotDealAmount_exchange_source": null,
  "snapshotPsrPrice": null,
  "snapshotServiceFeeTransferUzs": null,
  "snapshotWorkerPrice": null,
  "stages": [],
  "title": "T",
  "transactions": [],
}
`;

exports[`getTaskDetail — moliyaviy hisobot > mijoz summasi so'mda saqlangan 1`] = `
{
  "adminEarnedAmount": 0,
  "branchId": 2,
  "client": {
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": "150",
    "dealAmountCurrency": "USD",
    "dealAmountExchangeRate": null,
    "dealAmount_amount_uzs": "1900000",
    "dealAmount_currency": null,
    "dealAmount_exchange_rate": null,
    "id": 3,
    "name": "Mijoz",
    "serviceFeeTransferUzs": null,
  },
  "createdAt": "2026-09-01T10:00:00.000Z",
  "customsPaymentMultiplier": null,
  "errors": [],
  "exchangeRateInfo": null,
  "financialReport": {
    "cashAmount": 1900000,
    "certifierFee": 210000,
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": 1900000,
    "dealAmountBase": 1900000,
    "declarationPayment": 40000,
    "hiredWorkerPayment": 0,
    "netProfit": 1624998.5,
    "statePayment": 25001.5,
    "transferAmount": 0,
  },
  "hasPsr": false,
  "id": 1,
  "kpiLogs": [],
  "netProfit": 1624998.5,
  "operationalProfit": 128.45837944664032,
  "snapshotCertificatePayment": null,
  "snapshotCertificatePayment_amount_uzs": null,
  "snapshotCertificatePayment_currency": null,
  "snapshotCertificatePayment_exchange_rate": null,
  "snapshotContractPaymentType": null,
  "snapshotCustomsPayment": null,
  "snapshotCustomsPayment_amount_uzs": null,
  "snapshotCustomsPayment_currency": null,
  "snapshotCustomsPayment_exchange_rate": null,
  "snapshotDealAmount": null,
  "snapshotDealAmountExchangeRate": null,
  "snapshotDealAmount_amount_uzs": null,
  "snapshotDealAmount_exchange_rate": null,
  "snapshotDealAmount_exchange_source": null,
  "snapshotPsrPrice": null,
  "snapshotServiceFeeTransferUzs": null,
  "snapshotWorkerPrice": null,
  "stages": [],
  "title": "T",
  "transactions": [],
}
`;

exports[`getTaskDetail — moliyaviy hisobot > topilmadi 1`] = `null`;

exports[`getTaskDetail — moliyaviy hisobot > zamonaviy USD, PSR, BXM×2, KPI admin+ishchi 1`] = `
{
  "adminEarnedAmount": 25300,
  "branchId": 2,
  "client": {
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": "150",
    "dealAmountCurrency": "USD",
    "dealAmountExchangeRate": null,
    "dealAmount_amount_uzs": null,
    "dealAmount_currency": null,
    "dealAmount_exchange_rate": null,
    "id": 3,
    "name": "Mijoz",
    "serviceFeeTransferUzs": null,
  },
  "createdAt": "2026-09-01T10:00:00.000Z",
  "customsPaymentMultiplier": "2",
  "errors": [],
  "exchangeRateInfo": {
    "date": "2026-09-01T10:00:00.000Z",
    "rate": 12650,
    "source": "CBU",
  },
  "financialReport": {
    "cashAmount": 2150500,
    "certifierFee": 210000,
    "contractPaymentType": "CASH_ALL_INCLUSIVE",
    "dealAmount": 2150500,
    "dealAmountBase": 1986050,
    "declarationPayment": 75900,
    "hiredWorkerPayment": 54000,
    "netProfit": -314483675,
    "statePayment": 316268975,
    "transferAmount": 0,
  },
  "hasPsr": true,
  "id": 1,
  "kpiLogs": [
    {
      "amount": "2",
      "createdAt": "2026-09-01T00:00:00.000Z",
      "id": 1,
      "stageName": "Deklaratsiya",
      "user": {
        "email": "u1@x",
        "id": 1,
        "name": "U1",
      },
      "userId": 1,
    },
    {
      "amount": "2",
      "createdAt": "2026-09-01T00:00:00.000Z",
      "id": 2,
      "stageName": "Deklaratsiya",
      "user": {
        "email": "u2@x",
        "id": 2,
        "name": "U2",
      },
      "userId": 2,
    },
    {
      "amount": "2",
      "createdAt": "2026-09-01T00:00:00.000Z",
      "id": 3,
      "stageName": "Deklaratsiya",
      "user": {
        "email": "u3@x",
        "id": 3,
        "name": "U3",
      },
      "userId": 3,
    },
  ],
  "netProfit": -314483675,
  "operationalProfit": -24860.369565217392,
  "snapshotCertificatePayment": "10",
  "snapshotCertificatePayment_amount_uzs": "126500",
  "snapshotCertificatePayment_currency": "USD",
  "snapshotCertificatePayment_exchange_rate": null,
  "snapshotContractPaymentType": null,
  "snapshotCustomsPayment": "6",
  "snapshotCustomsPayment_amount_uzs": null,
  "snapshotCustomsPayment_currency": "USD",
  "snapshotCustomsPayment_exchange_rate": null,
  "snapshotDealAmount": "160",
  "snapshotDealAmountExchangeRate": null,
  "snapshotDealAmount_amount_uzs": "2024000",
  "snapshotDealAmount_exchange_rate": "12650",
  "snapshotDealAmount_exchange_source": "CBU",
  "snapshotPsrPrice": null,
  "snapshotServiceFeeTransferUzs": null,
  "snapshotWorkerPrice": null,
  "stages": [],
  "title": "T",
  "transactions": [],
}
`;
